--- a/css/chat.css
+++ b/css/chat.css
@@ -130,13 +130,17 @@
             }
 
             #sendBtn {
-                width: 56px;
-                height: 56px;
+                width: 48px;
+                height: 48px;
+                min-width: 48px;
                 border-radius: 50%;
-                font-size: 18px;
+                font-size: 16px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
 
             #sendBtn i {
-                font-size: 20px;
+                font-size: 18px;
             }
         }
