Fix mobile chat input css

--- a/css/chat.css
+++ b/css/chat.css
@@ -130,8 +130,8 @@
             }
 
             #sendBtn {
-                width: 50px;
-                height: 40px;
+                width: 60x;
+                height: 45px;
             }
 
             #sendBtn i {
