--- a/css/chat.css
+++ b/css/chat.css
@@ -132,6 +132,7 @@
             #sendBtn {
                 width: 60x;
                 height: 45px;
+                padding-left: 3px;
             }
 
             #sendBtn i {
