chat.css is fix

--- a/css/chat.css
+++ b/css/chat.css
@@ -132,7 +132,7 @@
             #sendBtn {
                 width: 60x;
                 height: 45px;
-                padding-left: 20px;
+                padding-right: 20px;
             }
 
             #sendBtn i {
