--- a/css/chat.css
+++ b/css/chat.css
@@ -130,7 +130,7 @@
             }
 
             #sendBtn {
-                width: 450x;
+                width: 45px;
                 height: 45px;
                 margin-right: 20px;
             }
